@@ -9,7 +9,7 @@
 - Calls: log.write("spam, ham\n")
 - Escaped charactes in strings "\n\r"
 - multiple args in print: print 'The Killer', joke
-- if "python" in text:
+= if "python" in text:
 	print text
 - for x in mylist:
 	print x	
@@ -19,6 +19,12 @@
 	pass
 - while True:
 	if not line: break	
+	
+- elif
+- else
+- pass, break
+- try/except/finally
+- raise
 
 + Real number
 + Parse Real number
